Fixed CSS issue with image off-centering on mobile

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,8 @@ header {
 }
 
 .header-pic {
-    width: 400px;
+    max-width: 400px;
+    width: 100%;
     margin-top: 50px;
 }
 
